# blog-project

./: .dockerignore  .env  .env.sample  .gitmodules  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflow/: auto-update-submodules.yml
.github/workflows/: auto-update-submodules.yml  sync-to-services.yml
migrations/: env.py
migrations/versions/: 04df47a296f9_initial_create.py  1364ad3b6376_tables_create.py
src/app/: main.py
src/app/api/v1/: routes.py
src/app/core/: db.py
src/app/models/v1/: __init__.py  category.py  comment.py  product.py  product_category.py  product_image.py  product_variation.py
src/app/repositories/v1/: base.py  category.py  comment.py  product.py  product_image.py  product_variation.py
src/app/schemas/v1/: __init__.py  category.py  comment.py  product.py  product_image.py  product_variation.py
